<resources>
    <string name="app_name">Dont Be Late</string>
    <string name="get_location_button">Minha Localização</string>
    <string name="call_insetisan">Discar 25696969</string>
    <string name="security_error">Erro de segurança, verifique as permissões</string>
    <string name="take_picture_text">Tirar foto</string>
    <string name="email_prompt">Email</string>
    <string name="password_prompt">Senha</string>
    <string name="signin">Entrar</string>
    <string name="signup_text">Cadastrar</string>
    <string name="email_confirmation_prompt">Confirme o email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_name_placeholder">Disciplina</string>
    <string name="date_placeholder">01/01/1970</string>
    <string name="counter_placeholder">2/2</string>
    <string name="depart_label">Saída:</string>
    <string name="arrival_placeholder">07:00</string>
    <string name="depart_placeholder">9:30</string>
    <string name="arrival_label">Chegada:</string>
    <string name="moodle_pass_prompt">Senha do Moodle</string>


    <string name="auth_fail">Falha de autenticação (Moodle)</string>
</resources>
