<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name_placeholder"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:layout_below="@id/class_name"/>
        <TextView
            android:id="@+id/arrival_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_label"
            android:layout_below="@id/date"/>
        <TextView
            android:id="@+id/depart_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depart_label"
            android:layout_below="@id/arrival_label"/>

        <TextView
            android:id="@+id/arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_placeholder"
            android:layout_toRightOf="@id/arrival_label"
            android:layout_below="@id/date"
            />
        <TextView
            android:id="@+id/depart_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depart_placeholder"
            android:layout_alignLeft="@id/arrival_time"
            android:layout_below="@id/arrival_time"/>

        <TextView
            android:id="@+id/attendance_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter_placeholder"
            android:layout_alignParentRight="true"
            android:layout_below="@id/arrival_time"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>